--- a/JSStudyGameWebApp/JSStudyGameWebApp.csproj
+++ b/JSStudyGameWebApp/JSStudyGameWebApp.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="DataBaseJSStudyGame.sqlite-journal" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Images\" />
     <Folder Include="Photos\" />
     <Folder Include="wwwroot\" />
